--- a/liutong.html
+++ b/liutong.html
@@ -163,8 +163,6 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
-<li>123</li>
-
 <li>一</li>
 
 <li>信息政策法律</li>
@@ -12645,10 +12643,10 @@ Error message and password prompt
 <div created="20181216133700116" modified="20181216133701532" title="$:/state/showeditpreview">
 <pre>no</pre>
 </div>
-<div created="20181216130602546" modified="20181217041403664" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20181216130602546" modified="20181217041956310" title="$:/state/tab/sidebar--595412856">
+<pre>目录</pre>
 </div>
-<div created="20181217041225490" list="123 $:/ControlPanel 国外常用引擎 国内常用引擎 信息政策法律 GettingStarted" modified="20181217041255625" title="$:/StoryList">
+<div created="20181217041625386" list="信息政策法律 GettingStarted" modified="20181217042004072" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12664,19 +12662,19 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/Users/%E5%88%98%E5%BD%A4/Documents/GitHub/la/zuoye/liutong%20(1).html&quot;
+            &quot;text&quot;: &quot;https://liutong555.github.io/zuoye/liutong.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;liutong555.github.io&quot;
         },
         &quot;$:/info/url/hostname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/hostname&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;liutong555.github.io&quot;
         },
         &quot;$:/info/url/protocol&quot;: {
             &quot;title&quot;: &quot;$:/info/url/protocol&quot;,
-            &quot;text&quot;: &quot;file:&quot;
+            &quot;text&quot;: &quot;https:&quot;
         },
         &quot;$:/info/url/port&quot;: {
             &quot;title&quot;: &quot;$:/info/url/port&quot;,
@@ -12684,7 +12682,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/Users/%E5%88%98%E5%BD%A4/Documents/GitHub/la/zuoye/liutong%20(1).html&quot;
+            &quot;text&quot;: &quot;/zuoye/liutong.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -12692,7 +12690,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;file://&quot;
+            &quot;text&quot;: &quot;https://liutong555.github.io&quot;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
@@ -12813,9 +12811,6 @@ Error message and password prompt
         }
     }
 }</pre>
-</div>
-<div created="20181217041340764" modified="20181217041352166" tags="" title="123">
-<pre>123</pre>
 </div>
 <div created="20181217040831792" modified="20181217040850624" tags="" title="一">
 <pre>uid哈怂</pre>
